Ajustando classe de teste, e service para atender esteira/sonar